--- a/src/Components/Skills.css
+++ b/src/Components/Skills.css
@@ -1,10 +1,3 @@
-.progress-label {
-    display: block;
-    margin-bottom: 0.5rem;
-    font-size: 1rem;
-    font-weight: 600;
-}
-
 .mb-9 {
     margin-bottom: 3rem;
 }
@@ -13,20 +6,6 @@
     font-size: 0.75rem;
     color: var(--text-color);
     margin-top: 2px;
-}
-
-.progress-animated .progress-bar {
-    background-image: linear-gradient(
-        45deg,
-        rgba(255, 255, 255, 0.15) 25%,
-        transparent 25%,
-        transparent 50%,
-        rgba(255, 255, 255, 0.15) 50%,
-        rgba(255, 255, 255, 0.15) 75%,
-        transparent 75%,
-        transparent
-    );
-    background-size: 1rem 1rem;
 }
 
 .skill-category-title {
@@ -40,6 +19,9 @@
     list-style: none;
     padding: 0;
     margin: 0;
+    flex-wrap: wrap;
+    align-items: center;
+    text-align: center;
 }
 
 .skill-list li {
@@ -61,34 +43,12 @@
     text-decoration: none;
     width: 30%;
     color: var(--primary);
-    position: relative;
     display: inline-block;
     transition: color 0.3s ease;
 }
 
 .skill-link:hover {
-    text-decoration: none;
     transform: translateY(-2px);
-}
-
-.skill-progress-bar {
-    width: 100%;
-    height: 5px;
-    background-color: rgba(0, 0, 0, 0.1);
-    border-radius: 3px;
-    overflow: hidden;
-    /* margin-bottom: 1rem; */
-}
-
-.skill-progress {
-    height: 100%;
-    background-color: var(--primary);
-    width: 0%;
-    transition: width 0.8s ease-out;
-}
-
-.animation-translate.interaction-in .skill-progress {
-    width: var(--skill-percentage);
 }
 
 .skill-list li {
@@ -96,7 +56,7 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 1rem;
-    /* margin-bottom: 2.5rem; */
+    margin-bottom: 2.5rem;
     cursor: pointer;
     border-radius: 10px;
 }
@@ -151,8 +111,8 @@
 /* Large phones (576px - 767px) */
 @media (max-width: 767px) {
     .skill-category-col {
-        padding: 1rem;
-        margin-bottom: 1.25rem;
+        padding: 0.5rem;
+        margin-bottom: 1rem;
     }
 
     .skill-category-title {
@@ -164,7 +124,7 @@
         align-items: center;
     }
     .skill-link {
-        width: 50%;
+        width: 45%;
     }
 
     .skill-name {
@@ -192,7 +152,7 @@
         margin-bottom: 1.25rem;
     }
     .skill-link {
-        width: 100%;
+        width: 85%;
     }
 
     .skill-name {
